Currently only shows users chats but click functionality needs to be done

--- a/app/src/main/res/layout/list_item_contact.xml
+++ b/app/src/main/res/layout/list_item_contact.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="5dp">
 
     <ImageView
@@ -66,7 +66,7 @@
         <android.support.design.widget.FloatingActionButton
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:backgroundTint="#9bda5a"
+            app:backgroundTint="#9bda5a"
             android:src="@drawable/ic_friend"
             android:scaleType="fitCenter"
             />
