--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="messageTextColor">#0f3564</color>
 
     <color name="cardDividerColor">#d593908c</color>
+    <color name="profile_camera_button">#f17110</color>
+    <color name="profile_save_button">#224488</color>
 </resources>
