--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,18 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scroll_view"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="?android:attr/windowBackground"
+    android:orientation="vertical"
+    android:padding="15dp">
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:id="@+id/my_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Username: john"
+        android:textAppearance="@android:style/TextAppearance.Medium" />
+
+   <LinearLayout
+       android:layout_marginTop="15dp"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical">
+
+       <TextView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:text="Profile Name:"
+           android:textAppearance="@android:style/TextAppearance.Medium"
+           />
+
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal">
+
+           <android.support.v7.widget.AppCompatEditText
+               android:id="@+id/edit_prof_name"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content"
+               android:layout_weight="1"
+               android:layout_gravity="center_vertical"
+               android:enabled="false"/>
+
+           <ImageView
+               android:id="@+id/edit_button_prof_name"
+               android:layout_width="48dp"
+               android:layout_height="48dp"
+               android:layout_gravity="center_vertical"
+               android:scaleType="center"
+               android:src="@android:drawable/ic_menu_edit"
+               />
+
+       </LinearLayout>
+
+   </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Profile Status:"
+            android:textAppearance="@android:style/TextAppearance.Medium" />
 
-
+        <Spinner
+            android:id="@+id/prof_status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:entries="@array/profile_status"
+            android:padding="10dp"/>
 
     </LinearLayout>
 
-</RelativeLayout>
+    <TextView
+        android:layout_marginTop="15sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="My Groups:"
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        />
+
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+
+       <ListView
+           android:id="@+id/profile_groups_list"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           />
+
+       <TextView
+           android:id="@+id/no_groups"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="No Groups"
+           android:layout_centerInParent="true"
+           android:padding="10dp"
+           android:visibility="gone"/>
+
+   </RelativeLayout>
+
+    <TextView
+        android:layout_marginTop="15sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="My Contacts:"
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ListView
+            android:id="@+id/profile_contacts_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+        <TextView
+            android:id="@+id/no_contacts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Contacts"
+            android:layout_centerInParent="true"
+            android:padding="10dp"
+            android:visibility="gone"/>
+
+    </RelativeLayout>
+
+    <android.support.v7.widget.AppCompatButton
+        android:layout_marginTop="15dp"
+        android:id="@+id/save_profile_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Save &amp; Exit"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/profile_save_button"/>
+
+</LinearLayout>
