--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -7,4 +7,10 @@
         <item>@string/dialog_op3</item>
     </string-array>
 
+    <string-array name="chat_dialog_actions">
+        <item>@string/dialog_op1</item>
+        <item>@string/dialog_op2</item>
+        <item>@string/dialog_op4</item>
+    </string-array>
+
 </resources>
