--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -12,6 +12,8 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/footer_section"
         android:background="@color/white"
+        android:divider="@null"
+        android:dividerHeight="0dip"
         />
 
     <LinearLayout
