--- a/app/src/main/res/layout/my_message_cell.xml
+++ b/app/src/main/res/layout/my_message_cell.xml
@@ -9,8 +9,8 @@
     <android.support.v7.widget.CardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         app:cardBackgroundColor="@color/cardview_shadow_end_color"
         app:cardCornerRadius="6dp"
@@ -26,25 +26,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp">
-
-            <TextView
-                android:id="@+id/photoName"
-                android:layout_width="0dp"
-                android:layout_height="25dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center_vertical"
-                android:text="Steve Jobs"
-                android:textColor="@color/colorAccent"
-                android:textSize="16sp"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            tools:layout_editor_absoluteY="8dp"
+            android:background="@drawable/out_going_speech"
+            android:paddingRight="22dp"
+            android:paddingTop="8dp">
 
             <TextView
                 android:id="@+id/dateTime"
@@ -55,7 +40,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="13 May 2017, 1:19 AM"
-                android:textColor="@color/cardview_dark_background"
+                android:textColor="@color/timeTextColor"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/wishMessage" />
 
@@ -75,35 +60,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/photoName" />
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_marginBottom="0dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="0dp"
-                app:layout_constraintBottom_toTopOf="@+id/wishMessage"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/photoName"
-                app:srcCompat="@color/cardDividerColor" />
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_marginBottom="0dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="0dp"
-                app:layout_constraintBottom_toTopOf="@+id/dateTime"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/wishMessage"
-                app:srcCompat="@color/cardDividerColor" />
+                />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
