--- a/app/src/main/res/layout/list_item_my_contact.xml
+++ b/app/src/main/res/layout/list_item_my_contact.xml
@@ -5,14 +5,15 @@
     android:layout_height="wrap_content"
     android:padding="20dp">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/prof_pic"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="2dp"
+        android:layout_marginEnd="2dp"
         android:src="@mipmap/ic_launcher"
+        android:background="?attr/selectableItemBackgroundBorderless"
         />
 
     <LinearLayout
