--- a/app/src/main/res/layout/my_message_cell.xml
+++ b/app/src/main/res/layout/my_message_cell.xml
@@ -38,7 +38,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:text="13 May 2017, 1:19 AM"
                 android:textColor="@color/timeTextColor"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -60,6 +60,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 />
 
         </android.support.constraint.ConstraintLayout>
