--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="timeTextColor">#edecec</color>
 
     <color name="cardDividerColor">#d593908c</color>
+    <color name="itemDividerColor">#d5d7d7d7</color>
     <color name="profile_camera_button">#f17110</color>
     <color name="profile_save_button">#224488</color>
 </resources>
