--- a/app/src/main/res/layout/fragment_session.xml
+++ b/app/src/main/res/layout/fragment_session.xml
@@ -7,7 +7,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/all_chats_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        />
 
     <TextView
         android:id="@+id/no_chats"
