--- a/app/src/main/res/layout/my_message_cell.xml
+++ b/app/src/main/res/layout/my_message_cell.xml
@@ -6,6 +6,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/date_seperator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_shape"
+        android:text="08/09/2018"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_margin="5dp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"/>
+
     <android.support.v7.widget.CardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -20,7 +39,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/date_seperator">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -30,19 +49,6 @@
             android:background="@drawable/out_going_speech"
             android:paddingRight="22dp"
             android:paddingTop="8dp">
-
-            <TextView
-                android:id="@+id/dateTime"
-                android:layout_width="0dp"
-                android:layout_height="25dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="4dp"
-                android:text="13 May 2017, 1:19 AM"
-                android:textColor="@color/timeTextColor"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/wishMessage" />
 
             <TextView
                 android:id="@+id/wishMessage"
@@ -62,6 +68,32 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 />
+
+            <TextView
+                android:id="@+id/dateTime"
+                android:layout_width="0dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
+                android:text="13 May 2017, 1:19 AM"
+                android:textColor="@color/timeTextColor"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/wishMessage" />
+
+            <ImageView
+                android:id="@+id/receive_status"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_thumb_up"
+                android:scaleType="fitCenter"
+                android:layout_marginEnd="3dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/wishMessage"
+                android:layout_marginRight="3dp"
+                android:visibility="gone"/>
+
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
