--- a/app/src/main/res/menu/chat_detail_menu.xml
+++ b/app/src/main/res/menu/chat_detail_menu.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/action_contacts"
         android:orderInCategory="100"
-        android:title="My Contacts"
+        android:title="Settings"
         app:showAsAction="never" />
 
     <item
