--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -15,7 +15,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginRight="2dp"
         android:layout_marginEnd="2dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/placeholder"
         android:layout_centerVertical="true"
         android:background="?attr/selectableItemBackgroundBorderless"
         />
