--- a/app/src/main/res/layout/fragment_session_single.xml
+++ b/app/src/main/res/layout/fragment_session_single.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.naziur.androidchat.fragment.SessionFragment">
+    tools:context="com.example.naziur.androidchat.fragment.SingleSessionFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/all_chats_list"
