--- a/app/src/main/res/layout/list_item_my_contact.xml
+++ b/app/src/main/res/layout/list_item_my_contact.xml
@@ -43,4 +43,12 @@
 
     </LinearLayout>
 
+    <CheckBox
+        android:id="@+id/chooser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:visibility="gone"/>
+
 </RelativeLayout>
